module/core/derive_tools/tests/inc/index/compiletime/enum.rs
use derive_tools::Index;

#[ derive( Index ) ] 
enum Enum< T >
{
  Nothing,
  #[ index ]
  IndexVector( Vec< T > )  
}

fn main()
{  
}
